--- a/src/app/components/taskcomments/taskcomments.component.html
+++ b/src/app/components/taskcomments/taskcomments.component.html
@@ -7,30 +7,28 @@
             <div class='card-body'>
                 <div class="row" style="padding-bottom: 10px;">
                     <div class="col-md-3">
-                        InstitutionName :
+                        Id :
                     </div>
                     <div class="col-md-3">
-                        <input type="text" id="txtskill" class="form-control" Name="txtskill"
-                            [(ngModel)]="taskcomments.InstitutionName" placeholder="InstitutionName">
+                        <input type="number" id="txtskill" class="form-control" Name="txtskill"
+                            [(ngModel)]="taskcomments.Id" placeholder="Id">
                     </div>
                     <div class="col-md-3">
-                        QualificationtypeId :
+                        TaskId :
                     </div>
                     <div class="col-md-3">
-                        <!-- <select name="" id="" name="QualificationName" [(ngModel)]="institution.QualificationtypeId">
-                            <option *ngFor="let item of qualificationdata" value="{{item.QualificationName}}" > {{item.QualificationName}} </option>
-                        </select> -->
+                        
                         <input type="number" name="txtcode" class="form-control" id="txtcode"
-                            [(ngModel)]="taskcomments.QulificationTypeId" placeholder="QualificationtypeId" />
+                            [(ngModel)]="taskcomments.TaskId" placeholder="TaskId" />
                     </div>
 
                     <br><br>
                     <div class="col-md-3">
-                        MediumId :
+                        Comments :
                     </div>
                     <div class="col-md-3">
                         <input type="number" name="txtcode" id="txtcode" class="form-control"
-                            [(ngModel)]="taskcomments.MediumId" placeholder="MediumId" />
+                            [(ngModel)]="taskcomments.Comments" placeholder="Comments" />
                     </div>
                 </div>
 
@@ -55,10 +53,11 @@
 
                             <table class="table table-bordered">
                                 <thead>
+                                   
                                     <tr style="background-color: #007bff;color: white">
-                                        <th>InstitutionName</th>
-                                        <th>QualificationtypeId</th>
-                                        <th>MediumId</th>
+                                        <th>Id</th>
+                                        <th>TaskId</th>
+                                        <th>Comments</th>
                                         <th style="text-align: center;" colspan="2">Action</th>
 
                                     </tr>
@@ -70,10 +69,10 @@
                                         currentPage: page,
                                         totalItems: count
                                       };
-                                    let i = index">
-                                        <td>{{item.InstitutionName}}</td>
-                                        <td>{{item.QulificationTypeId}}</td>
-                                        <td>{{item.MediumId}}</td>
+                                    let i = index"> 
+                                        <td>{{item.Id}}</td>
+                                        <td>{{item.TaskId}}</td>
+                                        <td>{{item.Comments}}</td>
                                         <td><button class="btn btn-info" (click)="GetTaskCommentsById(item.Id)"> Edit
                                             </button></td>
                                         <td><button class="btn btn-danger" (click)="DeleteTaskComments(item.Id)"> Delete
