--- a/src/app/components/usercontacts/usercontacts.component.html
+++ b/src/app/components/usercontacts/usercontacts.component.html
@@ -7,31 +7,57 @@
             <div class='card-body'>
                 <div class="row" style="padding-bottom: 10px;">
                     <div class="col-md-3">
-                        InstitutionName :
+                        Id :
                     </div>
                     <div class="col-md-3">
-                        <input type="text" id="txtskill" class="form-control" Name="txtskill"
-                            [(ngModel)]="usercontacts.InstitutionName" placeholder="InstitutionName">
+                        <input type="number" id="txtskill" class="form-control" Name="txtskill"
+                            [(ngModel)]="usercontacts.Id" placeholder="Id">
                     </div>
                     <div class="col-md-3">
-                        QualificationtypeId :
+                        UserId :
                     </div>
                     <div class="col-md-3">
-                        <!-- <select name="" id="" name="QualificationName" [(ngModel)]="institution.QualificationtypeId">
-                            <option *ngFor="let item of qualificationdata" value="{{item.QualificationName}}" > {{item.QualificationName}} </option>
-                        </select> -->
+                       
                         <input type="number" name="txtcode" class="form-control" id="txtcode"
-                            [(ngModel)]="usercontacts.QulificationTypeId" placeholder="QualificationtypeId" />
+                            [(ngModel)]="usercontacts.UserId" placeholder="UserId" />
                     </div>
 
                     <br><br>
                     <div class="col-md-3">
-                        MediumId :
+                        MobileNumber :
                     </div>
                     <div class="col-md-3">
                         <input type="number" name="txtcode" id="txtcode" class="form-control"
-                            [(ngModel)]="usercontacts.MediumId" placeholder="MediumId" />
+                            [(ngModel)]="usercontacts.MobileNumber" placeholder="MobileNumber" />
                     </div>
+
+                    <br><br>
+                    <div class="col-md-3">
+                        IsPrimary :
+                    </div>
+                    <div class="col-md-3">
+                        <input type="text" name="txtcode" id="txtcode" class="form-control"
+                            [(ngModel)]="usercontacts.IsPrimary" placeholder="IsPrimary" />
+                    </div>
+
+                    <br><br>
+                    <div class="col-md-3">
+                        OrderId :
+                    </div>
+                    <div class="col-md-3">
+                        <input type="number" name="txtcode" id="txtcode" class="form-control"
+                            [(ngModel)]="usercontacts.OrderId" placeholder="OrderId" />
+                    </div>
+
+                    <br><br>
+                    <div class="col-md-3">
+                        ContactTypeId :
+                    </div>
+                    <div class="col-md-3">
+                        <input type="number" name="txtcode" id="txtcode" class="form-control"
+                            [(ngModel)]="usercontacts.ContactTypeId" placeholder="ContactTypeId" />
+                    </div>
+
                 </div>
 
                 <div class="row " style="padding-bottom: 10px;">
@@ -56,9 +82,14 @@
                             <table class="table table-bordered">
                                 <thead>
                                     <tr style="background-color: #007bff;color: white">
-                                        <th>InstitutionName</th>
-                                        <th>QualificationtypeId</th>
-                                        <th>MediumId</th>
+                                        <th>Id</th>
+                                        <th>UserId</th>
+                                        <th>MobileNumber</th>
+                                        <th>IsPrimary</th>
+                                        <th>MobileNumber</th>
+                                        <th>OrderId</th>
+                                        <th>ContactTypeId</th>
+                                        
                                         <th style="text-align: center;" colspan="2">Action</th>
 
                                     </tr>
@@ -71,9 +102,15 @@
                                         totalItems: count
                                       };
                                     let i = index">
-                                        <td>{{item.InstitutionName}}</td>
-                                        <td>{{item.QulificationTypeId}}</td>
-                                        <td>{{item.MediumId}}</td>
+                                        <td>{{item.Id}}</td>
+                                        <td>{{item.UserId}}</td>
+                                        <td>{{item.MobileNumber}}</td>
+                                        <td>{{item.IsPrimary}}</td>
+                                        <td>{{item.MobileNumber}}</td>
+                                        <td>{{item.OrderId}}</td>
+                                        <td>{{item.OrderId}}</td>
+                                        <td>{{item.ContactTypeId}}</td>
+                                        
                                         <td><button class="btn btn-info" (click)="GetUserContactsById(item.Id)"> Edit
                                             </button></td>
                                         <td><button class="btn btn-danger" (click)="DeleteUserContacts(item.Id)"> Delete
