--- a/src/app/components/usercourses/usercourses.component.html
+++ b/src/app/components/usercourses/usercourses.component.html
@@ -4,33 +4,50 @@
             <div class='card-header'>
                 <h1>UserCourses</h1>
             </div>
+           
             <div class='card-body'>
                 <div class="row" style="padding-bottom: 10px;">
                     <div class="col-md-3">
-                        InstitutionName :
+                        Id :
                     </div>
                     <div class="col-md-3">
-                        <input type="text" id="txtskill" class="form-control" Name="txtskill"
-                            [(ngModel)]="usercourses.InstitutionName" placeholder="InstitutionName">
+                        <input type="number" id="txtskill" class="form-control" Name="txtskill"
+                            [(ngModel)]="usercourses.Id" placeholder="Id">
                     </div>
                     <div class="col-md-3">
-                        QualificationtypeId :
+                        CourseId :
                     </div>
                     <div class="col-md-3">
-                        <!-- <select name="" id="" name="QualificationName" [(ngModel)]="institution.QualificationtypeId">
-                            <option *ngFor="let item of qualificationdata" value="{{item.QualificationName}}" > {{item.QualificationName}} </option>
-                        </select> -->
+                        
                         <input type="number" name="txtcode" class="form-control" id="txtcode"
-                            [(ngModel)]="usercourses.QulificationTypeId" placeholder="QualificationtypeId" />
+                            [(ngModel)]="usercourses.CourseId" placeholder="CourseId" />
                     </div>
 
                     <br><br>
                     <div class="col-md-3">
-                        MediumId :
+                        IsPrimary :
+                    </div>
+                    <div class="col-md-3">
+                        <input type="text" name="txtcode" id="txtcode" class="form-control"
+                            [(ngModel)]="usercourses.IsPrimary" placeholder="IsPrimary" />
+                    </div>
+
+                    <br><br>
+                    <div class="col-md-3">
+                        UserId :
                     </div>
                     <div class="col-md-3">
                         <input type="number" name="txtcode" id="txtcode" class="form-control"
-                            [(ngModel)]="usercourses.MediumId" placeholder="MediumId" />
+                            [(ngModel)]="usercourses.UserId" placeholder="UserId" />
+                    </div>
+
+                    <br><br>
+                    <div class="col-md-3">
+                        OrderId :
+                    </div>
+                    <div class="col-md-3">
+                        <input type="text" name="txtcode" id="txtcode" class="form-control"
+                            [(ngModel)]="usercourses.OrderId" placeholder="OrderId" />
                     </div>
                 </div>
 
@@ -56,9 +73,12 @@
                             <table class="table table-bordered">
                                 <thead>
                                     <tr style="background-color: #007bff;color: white">
-                                        <th>InstitutionName</th>
-                                        <th>QualificationtypeId</th>
-                                        <th>MediumId</th>
+                                        <th>Id</th>
+                                        <th>CourseId</th>
+                                        <th>IsPrimary</th>
+                                        <th>UserId</th>
+                                        <th>OrderId</th>
+                                        
                                         <th style="text-align: center;" colspan="2">Action</th>
 
                                     </tr>
@@ -71,9 +91,12 @@
                                         totalItems: count
                                       };
                                     let i = index">
-                                        <td>{{item.InstitutionName}}</td>
-                                        <td>{{item.QulificationTypeId}}</td>
-                                        <td>{{item.MediumId}}</td>
+                                        <td>{{item.Id}}</td>
+                                        <td>{{item.CourseId}}</td>
+                                        <td>{{item.IsPrimary}}</td>
+                                        <td>{{item.UserId}}</td>
+                                        <td>{{item.OrderId}}</td>
+                                        
                                         <td><button class="btn btn-info" (click)="GetUserCoursesById(item.Id)"> Edit
                                             </button></td>
                                         <td><button class="btn btn-danger" (click)="DeleteUserCourses(item.Id)"> Delete
