--- a/src/app/components/useremails/useremails.component.html
+++ b/src/app/components/useremails/useremails.component.html
@@ -3,34 +3,60 @@
         <div class='card'>
             <div class='card-header'>
                 <h1>UserEmails</h1>
+                
             </div>
             <div class='card-body'>
                 <div class="row" style="padding-bottom: 10px;">
                     <div class="col-md-3">
-                        InstitutionName :
+                        Id :
                     </div>
                     <div class="col-md-3">
                         <input type="text" id="txtskill" class="form-control" Name="txtskill"
-                            [(ngModel)]="useremails.InstitutionName" placeholder="InstitutionName">
+                            [(ngModel)]="useremails.Id" placeholder="Id">
                     </div>
                     <div class="col-md-3">
-                        QualificationtypeId :
+                        UserId :
                     </div>
                     <div class="col-md-3">
-                        <!-- <select name="" id="" name="QualificationName" [(ngModel)]="institution.QualificationtypeId">
-                            <option *ngFor="let item of qualificationdata" value="{{item.QualificationName}}" > {{item.QualificationName}} </option>
-                        </select> -->
+                      
                         <input type="number" name="txtcode" class="form-control" id="txtcode"
-                            [(ngModel)]="useremails.QulificationTypeId" placeholder="QualificationtypeId" />
+                            [(ngModel)]="useremails.UserId" placeholder="UserId" />
                     </div>
 
                     <br><br>
                     <div class="col-md-3">
-                        MediumId :
+                        Email :
+                    </div>
+                    <div class="col-md-3">
+                        <input type="text" name="txtcode" id="txtcode" class="form-control"
+                            [(ngModel)]="useremails.Email" placeholder="Email" />
+                    </div>
+
+                    <br><br>
+                    <div class="col-md-3">
+                        IsPrimary :
+                    </div>
+                    <div class="col-md-3">
+                        <input type="text" name="txtcode" id="txtcode" class="form-control"
+                            [(ngModel)]="useremails.IsPrimary" placeholder="IsPrimary" />
+                    </div>
+
+                    <br><br>
+                    <div class="col-md-3">
+                        OrderId :
                     </div>
                     <div class="col-md-3">
                         <input type="number" name="txtcode" id="txtcode" class="form-control"
-                            [(ngModel)]="useremails.MediumId" placeholder="MediumId" />
+                            [(ngModel)]="useremails.OrderId" placeholder="OrderId" />
+                    </div>
+
+                    <br><br>
+                    <div class="col-md-3">
+                        TypeId :
+                    </div>
+                    <div class="col-md-3">
+                        <input type="number" name="txtcode" id="txtcode" class="form-control"
+                            [(ngModel)]="useremails.TypeId" placeholder="TypeId" />
                     </div>
                 </div>
 
@@ -56,9 +82,13 @@
                             <table class="table table-bordered">
                                 <thead>
                                     <tr style="background-color: #007bff;color: white">
-                                        <th>InstitutionName</th>
-                                        <th>QualificationtypeId</th>
-                                        <th>MediumId</th>
+                                        <th>Id</th>
+                                        <th>UserId</th>
+                                        <th>Email</th>
+                                        <th>IsPrimary</th>
+                                        <th>OrderId</th>
+                                        <th>TypeId</th>
+                                        
                                         <th style="text-align: center;" colspan="2">Action</th>
 
                                     </tr>
@@ -71,9 +101,13 @@
                                         totalItems: count
                                       };
                                     let i = index">
-                                        <td>{{item.InstitutionName}}</td>
-                                        <td>{{item.QulificationTypeId}}</td>
-                                        <td>{{item.MediumId}}</td>
+                                        <td>{{item.Id}}</td>
+                                        <td>{{item.UserId}}</td>
+                                        <td>{{item.Email}}</td>
+                                        <td>{{item.IsPrimary}}</td>
+                                        <td>{{item.OrderId}}</td>
+                                        <td>{{item.TypeId}}</td>
+                                        
                                         <td><button class="btn btn-info" (click)="GetUserEmailsById(item.Id)"> Edit
                                             </button></td>
                                         <td><button class="btn btn-danger" (click)="DeleteUserEmails(item.Id)"> Delete
